<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".CreateEventActivity">

    <!-- TextView Title -->
    <TextView
        android:id="@+id/create_event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/event_title"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/edt_event_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- EditText Event Name -->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/event_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="#AFAFAF"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/create_event_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Start Date -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="120dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_start_calendar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_calendar" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:hint="@string/event_start"
            android:inputType="date"
            android:textColor="@android:color/black"
            android:textColorHint="#AFAFAF"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/img_start_calendar"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- End Date -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="120dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_end_calendar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_calendar" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:hint="@string/event_end"
            android:inputType="date"
            android:textColor="@android:color/black"
            android:textColorHint="#AFAFAF"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/img_end_calendar"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Start Time -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="190dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_start_clock"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_clock" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:hint="@string/event_start"
            android:inputType="time"
            android:textColor="@android:color/black"
            android:textColorHint="#AFAFAF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_start_clock"
            app:layout_constraintTop_toTopOf="@+id/img_start_clock" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- End Time -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="190dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_end_clock"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_clock" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:hint="@string/event_end"
            android:inputType="time"
            android:textColor="@android:color/black"
            android:textColorHint="#AFAFAF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_end_clock"
            app:layout_constraintTop_toTopOf="@+id/img_end_clock" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Locations -->
    <LinearLayout
        android:id="@+id/layout_locations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="240dp"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_event_loaction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/event_location"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textColorHint="#AFAFAF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_weight="3"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_event_loaction_eta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/event_start"
                android:inputType="time"
                android:textColor="@android:color/black"
                android:textColorHint="#AFAFAF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_weight="1"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_event_loaction_etd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/event_end"
                android:inputType="time"
                android:textColor="@android:color/black"
                android:textColorHint="#AFAFAF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_weight="1"
                />

        </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Button Add Location -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_add_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onAddField"
            android:src="@drawable/ic_add_pink"
            app:backgroundTint="@android:color/white"
            app:fabSize="mini"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_weight="1"/>

        <!-- Button Remove Location -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_remove_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onDeleteField"
            android:src="@drawable/ic_remove_pink"
            app:backgroundTint="@android:color/white"
            app:fabSize="mini"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_event_add_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:onClick="createEventClick"
            android:text="@string/submit_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>